--- a/demo/mode-demo/style.css
+++ b/demo/mode-demo/style.css
@@ -12,18 +12,40 @@ html, body {
 }
 
 .login {
-    width: 100px;
-    height: 100px;
-    background: grey;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0, 0.7);
     display: none;
+    position: absolute;
+    top: 0;
+    justify-content: center;
+    align-items: center;
 }
 
 header {
-    height: 60px;
+    height: 50px;
     width: 100%;
+    background: #009688;
 }
 
 .logo {
     width: 50px;
     height: 50px;
+    margin-left: 10px;
+    border-radius: 40px;
+}
+
+form {
+    height: 30px;
+    padding: 10px;
+}
+
+.loginBtn {
+    margin-left: 10px;
+}
+
+.login-child {
+    width: 250px;
+    height: 200px;
+    background: #009688;
 }
