--- a/demo/my-demos/src/index.css
+++ b/demo/my-demos/src/index.css
@@ -3,3 +3,25 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+html, body,#root{
+  height: 100%;
+  width: 100%;
+}
+
+.container{
+  height: 100%;
+}
+
+.search {
+  height: 32px;
+  background: #333;
+  border-radius: 6px;
+  margin: 16px;
+}
+
+iframe{
+  height: 100%;
+  width: 100%;
+  border: none;
+}
