--- a/demo/my-demos/src/index.css
+++ b/demo/my-demos/src/index.css
@@ -10,15 +10,18 @@ html, body,#root, .container{
 }
 
 .logo {
-  width: 31px;
-  height: 31px;
-  background: #333;
-  border-radius: 6px;
-  margin: 16px 28px 16px 0;
-  float: left;
-  background-image: url(https://renhongl.github.io/images/panda.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
+  width: 100px;
+    height: 100px;
+    background: #fff;
+    border: 3px solid #fff;
+    margin-top: 10px;
+    float: left;
+    background-image: url(https://renhongl.github.io/images/panda.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
 }
 
 iframe{
@@ -32,12 +35,13 @@ iframe{
 }
 
 .header{
-  background: #fff !important;
+  background: #9ac4a0 !important;
 }
 
 .header ul{
   display: flex;
   flex-direction: row-reverse;
+  background: #9ac4a0;
 }
 
 .header li {
@@ -50,4 +54,8 @@ iframe{
 
 .main-content .ant-layout-content{
   height: 100%;
+}
+
+.main-content .ant-layout-sider{
+  background: #fff;
 }
