Updated my react page

--- a/demo/my-demos/src/navigation/style.css
+++ b/demo/my-demos/src/navigation/style.css
@@ -2,6 +2,7 @@
 
 .navigation-search{
     width: 94% !important;
-    margin-top: 60px;
+    margin-top: 7px;
     margin-left: 5px;
+    margin-bottom: 20px;
 }
