--- a/demo/my-demos/src/index.css
+++ b/demo/my-demos/src/index.css
@@ -7,21 +7,7 @@ body {
 html, body,#root, .container{
   height: 100%;
   width: 100%;
-}
-
-.logo {
-  width: 100px;
-    height: 100px;
-    background: #fff;
-    border: 3px solid #fff;
-    margin-top: 10px;
-    float: left;
-    background-image: url(https://renhongl.github.io/images/panda.jpg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 50%;
-    position: absolute;
-    z-index: 1;
+  overflow: hidden;
 }
 
 iframe{
@@ -30,32 +16,3 @@ iframe{
   border: none;
 }
 
-.main-content{
-  flex-direction: row !important;
-}
-
-.header{
-  background: #9ac4a0 !important;
-}
-
-.header ul{
-  display: flex;
-  flex-direction: row-reverse;
-  background: #9ac4a0;
-}
-
-.header li {
-    margin-left: 10px;
-}
-
-.main-content .ant-layout{
-  padding: 0px 24px 0px 24px !important;
-}
-
-.main-content .ant-layout-content{
-  height: 100%;
-}
-
-.main-content .ant-layout-sider{
-  background: #fff;
-}
