--- a/demo/my-demos/src/content/style.css
+++ b/demo/my-demos/src/content/style.css
@@ -18,6 +18,27 @@
 
 .main-content .ant-layout-content{
   height: 100%;
+  position: relative;
+}
+
+.ant-layout-content .ant-spin{
+  width: 100%;
+  height: 100%;
+}
+
+.iframe-container{
+  width: 100%;
+  height: 100%;
+}
+
+.loading-container{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.ant-layout-content .ant-spin-dot{
+  margin-top: 100px;
 }
 
 .main-content .ant-layout-sider{
