--- a/the-best/src/component/share/global.less
+++ b/the-best/src/component/share/global.less
@@ -1,3 +1,9 @@
 
 
-@main-color: rgb(194, 183, 183);
+@main-color: #b3ade9;
+@second-color: #bdd9fc;
+@third-color: #d5c9f9;
+@fourth-color: #b0fefb;
+
+
+
