--- a/the-best/src/component/setting/style.less
+++ b/the-best/src/component/setting/style.less
@@ -1,6 +1,9 @@
 
 
-@import "../share/global.less";
+@main-color: #b3ade9;
+@second-color: #bdd9fc;
+@third-color: #d5c9f9;
+@fourth-color: #b0fefb;
 
 .setting{
     background: @main-color;
