--- a/the-best/src/share/style/global.less
+++ b/the-best/src/share/style/global.less
@@ -3,3 +3,14 @@
 
 
 
+html, body, #root, .home{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+div, p, ul, ol, li, h1, h2, h3, h4, h5, h6{
+    margin: 0;
+    padding: 0;
+}
