--- a/the-best/src/component/setting/style.less
+++ b/the-best/src/component/setting/style.less
@@ -7,7 +7,10 @@
 
 .setting{
     background: @main-color;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    right: 0;
+    top: -30px;
+    padding-top: 30px;
 }
