--- a/the-best/src/component/setting/style.less
+++ b/the-best/src/component/setting/style.less
@@ -8,9 +8,17 @@
 .setting{
     background: @main-color;
     height: 100%;
-    width: 200px;
+    width: 300px;
     position: fixed;
     right: 0;
     top: -30px;
     padding-top: 30px;
+}
+
+.show{
+    display: block;
+}
+
+.hide{
+    display: none;
 }
