--- a/the-best/src/component/footer/style.less
+++ b/the-best/src/component/footer/style.less
@@ -1,17 +1,12 @@
 
 
-@main-color: #b3ade9;
-@second-color: #bdd9fc;
-@third-color: #d5c9f9;
-@fourth-color: #b0fefb;
+@import "../../share/style/global.less";
 
 .footer{
     position: fixed;
     bottom: 0;
     height: 30px;
     width: 100%;
-    background: @main-color;
-    color: #fff;
 
     .left{
         height: 100%;
