--- a/the-best/src/share/style/global.less
+++ b/the-best/src/share/style/global.less
@@ -1,9 +1,12 @@
 
 
 
+@main-color: rgb(179, 173, 233);
+@second-color: rgb(189, 217, 252);
+@third-color: rgb(213, 201, 249);
+@fourth-color: rgb(176, 254, 251);
 
-
-html, body, #root, .home{
+html, body, #root{
     margin: 0;
     padding: 0;
     width: 100%;
