--- a/the-best/src/share/style/global.less
+++ b/the-best/src/share/style/global.less
@@ -1,7 +1,8 @@
 
 
 
-@main-color: rgb(179, 173, 233);
+@main-color: rgb(0, 0, 0);
+@first-color: rgb(179, 173, 233);
 @second-color: rgb(189, 217, 252);
 @third-color: rgb(213, 201, 249);
 @fourth-color: rgb(176, 254, 251);
