--- a/the-best/src/component/setting/style.less
+++ b/the-best/src/component/setting/style.less
@@ -22,6 +22,11 @@
             background: #ffffff7a;
         }
     }
+
+    .opacity{
+        background: #ffffff2b;
+        border: none;
+    }
 }
 
 .show{
@@ -39,4 +44,21 @@
     font-size: 24px;
     padding-left: 10px;
     font-weight: bold;
+}
+
+.bgPreview{
+    width: 300px;
+    height: 200px;
+}
+
+ul{
+    list-style-type: none;
+}
+
+.background-color{
+    li{
+        height: 30px;
+        margin-top: 5px;
+        padding-left: 20px;
+    }
 }
