--- a/the-best/src/component/setting/style.less
+++ b/the-best/src/component/setting/style.less
@@ -3,12 +3,11 @@
 @import "../../share/style/global.less";
 
 .setting{
-    height: 100%;
+    height: calc(~"100% - 30px");
     width: 300px;
     position: fixed;
     right: 0;
-    top: -30px;
-    padding-top: 30px;
+    top: 0;
     overflow: auto;
 
     h4{
