--- a/the-best/src/component/dialog/style.less
+++ b/the-best/src/component/dialog/style.less
@@ -9,5 +9,13 @@
 
     .dialog-header{
         height: 30px;
+        line-height: 30px;
+        padding-left: 5px;
+        font-weight: bold;
+    }
+
+    .dialog-content{
+        width: 100%;
+        height: calc(~"100% - 30px");
     }
 }
