--- a/the-best/src/component/footer/style.less
+++ b/the-best/src/component/footer/style.less
@@ -7,6 +7,8 @@
     bottom: 0;
     height: 30px;
     width: 100%;
+    transition: all .5s;
+    z-index: 100;
 
     .left{
         height: 100%;
