--- a/the-best/src/component/dialog/style.less
+++ b/the-best/src/component/dialog/style.less
@@ -12,10 +12,29 @@
         line-height: 30px;
         padding-left: 5px;
         font-weight: bold;
+        transition: all .5s;
+
+        .dialog-close{
+            float: right;
+            width: 30px;
+            text-align: center;
+            color: #fff;
+            &:hover{
+                background: rgba(255, 255, 255, 0.4);
+            }
+        }
     }
 
     .dialog-content{
         width: 100%;
         height: calc(~"100% - 30px");
     }
+}
+
+.dialog.show{
+    display: block;
+}
+
+.dialog.hide{
+    display: none;
 }
