--- a/the-best/src/component/store/style.less
+++ b/the-best/src/component/store/style.less
@@ -4,18 +4,41 @@
 
 
 .store{
-    width: 100%;
-    height: calc(~"100% - 30px");
     position: fixed;
     z-index: 100;
     left: 0;
     top: 0;
+    transition: .5s;
+    overflow-x: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .iconSpan{
+        width: 50px;
+        height: 50px;
+        display: inline-block;
+        background-color: rgba(255, 255, 255, 0.2);
+        font-size: 25px;
+        line-height: 50px;
+        border-radius: 7px;
+        text-align: center;
+        color: #fff;
+        margin: 10px;
+        transition: all .5s;
+        &:hover{
+            font-size: 28px;
+            background-color: rgba(255, 255, 255, 0.4);
+        }
+    }
 }
 
-.show{
-    display: block;
+.store.show{
+    width: 100%;
+    height: calc(~"100% - 30px");
 }
 
-.hide{
-    display: none;
+.store.hide{
+    width: 0;
+    height: 0;
 }
