--- a/the-best/src/component/footer/style.less
+++ b/the-best/src/component/footer/style.less
@@ -16,7 +16,7 @@
         width: 50%;
         justify-content: flex-start;
         align-items: center;
-        padding-left: 10px;
+        // padding-left: 10px;
         float: left;
     }
 
@@ -26,7 +26,19 @@
         width: 50%;
         justify-content: flex-end;
         align-items: center;
-        padding-right: 10px;
+        // padding-right: 10px;
         float: left;
+    }
+
+    .btn{
+        width: 30px;
+        text-align: center;
+        color: #fff;
+        height: 30px;
+        line-height: 30px;
+        transition: all .5s;
+        &:hover{
+            background: rgba(255, 255, 255, 0.4);
+        }
     }
 }
