--- a/the-best/src/component/dialog/style.less
+++ b/the-best/src/component/dialog/style.less
@@ -38,3 +38,11 @@
 .dialog.hide{
     display: none;
 }
+
+.dialog.show[status="min"] {
+    display: none;
+}
+
+.dialog.show[status="normal"] {
+    display: block;
+}
