--- a/the-best/src/component/footer/style.less
+++ b/the-best/src/component/footer/style.less
@@ -41,5 +41,10 @@
             background: rgba(255, 255, 255, 0.4);
         }
     }
+    .btn.time{
+        width: 70px;
+        cursor: default;
+        text-align: center;
+    }
 
 }
