--- a/the-best/src/component/markdownEditor/style.less
+++ b/the-best/src/component/markdownEditor/style.less
@@ -8,21 +8,33 @@
         width: 20%;
         height: 100%;
         float: left;
-        border-right: 1px solid rgba(255, 255, 255, 0.2);
+        // border-right: 1px solid rgba(255, 255, 255, 0.2);
         div{
             height: 30px;
-            background: rgba(255, 255, 255, 0.2);
+            // background: rgba(255, 255, 255, 0.2);
             margin-top: 1px;
             padding-left: 10px;
             line-height: 30px;
             transition: all .5s;
             &:hover{
-                background: rgba(255, 255, 255, 0.4);
+                background: rgba(255, 255, 255, 0.2);
                 cursor: pointer;
             }
         }
         .selected{
-            background: rgba(255, 255, 255, 0.4);
+            background: rgba(255, 255, 255, 0.2);
+            position: relative;
+        }
+        .selected::before {
+            content: "";
+            width: 0;
+            height: 0;
+            border: 5px transparent solid;
+            border-left: 5px solid rgba(255, 255, 255, 0.2);
+            position: absolute;
+            right: -10px;
+            top: 50%;
+            transform: translateY(-50%);
         }
     }
 
@@ -50,6 +62,7 @@
         color: #fff !important;
         overflow: auto;
         padding-top: 20px;
+        text-align: center;
         h1, h2, h3, h4, h5, h6{
             color: #fff !important;
         }
