--- a/the-best/src/share/style/global.less
+++ b/the-best/src/share/style/global.less
@@ -1,7 +1,7 @@
 
 
 
-@main-color: rgb(0, 0, 0);
+@main-color: rgb(255, 255, 255);
 @first-color: rgb(179, 173, 233);
 @second-color: rgb(189, 217, 252);
 @third-color: rgb(213, 201, 249);
@@ -18,3 +18,29 @@ div, p, ul, ol, li, h1, h2, h3, h4, h5, h6{
     margin: 0;
     padding: 0;
 }
+
+.ant-notification-notice-message{
+    color: #fff !important;
+}
+
+.ant-tooltip-inner{
+    background: rgba(255, 255, 255, 0.2) !important;
+}
+
+.ant-tooltip-arrow{
+    border-top-color:rgba(255, 255, 255, 0.2) !important;
+}
+
+::-webkit-scrollbar {/*滚动条整体样式*/
+    width: 10px;     /*高宽分别对应横竖滚动条的尺寸*/
+    height: 1px;
+}
+::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.4);
+}
+::-webkit-scrollbar-track {/*滚动条里面轨道*/
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.2);
+}
+
