--- a/the-best/src/component/markdownEditor/style.less
+++ b/the-best/src/component/markdownEditor/style.less
@@ -5,9 +5,12 @@
     height: 100%;
 
     .list{
-        width: 20%;
+        width: 100px;
         height: 100%;
         float: left;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
         // border-right: 1px solid rgba(255, 255, 255, 0.2);
         div{
             height: 30px;
@@ -55,14 +58,17 @@
     }
 
     .preview{
-        width: 80%;
+        width: calc(~"100% - 100px");
         float: left;
         height: 100%;
-        padding-left: 20px;
+        /* padding-left: 20px; */
         color: #fff !important;
         overflow: auto;
-        padding-top: 20px;
+        /* padding-top: 20px; */
         text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         h1, h2, h3, h4, h5, h6{
             color: #fff !important;
         }
