--- a/the-best/src/component/markdownEditor/style.less
+++ b/the-best/src/component/markdownEditor/style.less
@@ -61,16 +61,71 @@
         width: calc(~"100% - 100px");
         float: left;
         height: 100%;
-        /* padding-left: 20px; */
+        padding-left: 20px;
         color: #fff !important;
+        position: relative;
         overflow: auto;
-        /* padding-top: 20px; */
+        padding-top: 20px;
         text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
         h1, h2, h3, h4, h5, h6{
             color: #fff !important;
         }
+        h2, h3{
+            width: 30px;
+            float: left;
+            
+        }
+        h2{
+            animation: change 3s ease-in-out infinite alternate;
+        }
+        h3:first-child{
+            animation: change 3s ease-in-out 0.2s infinite alternate;
+        }
+        h3:nth-child(2){
+            animation: change 3s ease-in-out 0.4s infinite alternate;
+        }
+        h3:nth-child(3){
+            animation: change 3s ease-in-out 0.6s infinite alternate;
+        }
+        h3:nth-child(4){
+            animation: change 3s ease-in-out 0.8s infinite alternate;
+        }
+        h3:nth-child(5){
+            animation: change 3s ease-in-out 1s infinite alternate;
+        }
+        h3:nth-child(6){
+            animation: change 3s ease-in-out 1.2s infinite alternate;
+        }
+        .rain{
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background: rgba(255, 255, 255, 0.5);
+            animation: rain 3s ease-in-out;
+            border-radius: 50%;
+        }
+    }
+}
+
+@keyframes rain{
+    from{
+        transform: scale(0, 0);
+        background: rgba(255, 255, 255, 0.5);
+    }
+    to{
+        transform: scale(1, 1);
+        background: rgba(255, 255, 255, 0.1);
+    }
+}
+
+@keyframes change{
+    from{
+        color: rgba(255, 255, 255, 0.5);
+    }
+    to{
+        color: rgba(255, 255, 255, 0.1);
     }
 }
