--- a/the-best/src/component/markdownEditor/style.less
+++ b/the-best/src/component/markdownEditor/style.less
@@ -62,7 +62,7 @@
         float: left;
         height: 100%;
         padding-left: 20px;
-        color: #fff !important;
+        color: rgba(255, 255, 255, 0.8) !important;
         position: relative;
         overflow: auto;
         padding-top: 20px;
@@ -99,6 +99,30 @@
         h3:nth-child(6){
             animation: change 3s ease-in-out 1.2s infinite alternate;
         }
+        h3:nth-child(7){
+            animation: change 3s ease-in-out 1.4s infinite alternate;
+        }
+        h3:nth-child(8){
+            animation: change 3s ease-in-out 1.6s infinite alternate;
+        }
+        h3:nth-child(9){
+            animation: change 3s ease-in-out 1.8s infinite alternate;
+        }
+        h3:nth-child(10){
+            animation: change 3s ease-in-out 2.0s infinite alternate;
+        }
+        h3:nth-child(11){
+            animation: change 3s ease-in-out 2.2s infinite alternate;
+        }
+        h3:nth-child(12){
+            animation: change 3s ease-in-out 2.4s infinite alternate;
+        }
+        h3:nth-child(13){
+            animation: change 3s ease-in-out 2.6s infinite alternate;
+        }
+        h3:nth-child(14){
+            animation: change 3s ease-in-out 2.8s infinite alternate;
+        }
         .rain{
             position: absolute;
             width: 50px;
@@ -117,13 +141,13 @@
     }
     to{
         transform: scale(1, 1);
-        background: rgba(255, 255, 255, 0.1);
+        background: rgba(255, 255, 255, 0);
     }
 }
 
 @keyframes change{
     from{
-        color: rgba(255, 255, 255, 0.5);
+        color: rgba(255, 255, 255, 0.8);
     }
     to{
         color: rgba(255, 255, 255, 0.1);
