--- a/the-best/src/component/footer/style.less
+++ b/the-best/src/component/footer/style.less
@@ -33,17 +33,18 @@
     .btn{
         width: 30px;
         text-align: center;
-        color: #fff;
         height: 30px;
         line-height: 30px;
         transition: all .5s;
         &:hover{
             background: rgba(255, 255, 255, 0.4);
+            background: rgba(255, 255, 255, 0.4);
+            border-radius: 50%;
+            cursor: pointer;
         }
     }
     .btn.time{
         width: 70px;
-        cursor: default;
         text-align: center;
     }
 
