--- a/the-best/src/component/dialog/style.less
+++ b/the-best/src/component/dialog/style.less
@@ -13,7 +13,7 @@
     .dialog-header{
         height: 30px;
         line-height: 30px;
-        padding-left: 5px;
+        padding-left: 15px;
         font-weight: bold;
         transition: all .5s;
         float: left;
@@ -21,17 +21,21 @@
         position: absolute;
         width: 100%;
         &:hover .dialog-close{
-            color: #fff !important;
+            // color: #fff !important;
+            opacity: 1;
         }
 
         .dialog-close{
             float: right;
             width: 30px;
             text-align: center;
-            color: #fff0 !important;
+            // color: #fff !important;
+            opacity: 0;
             transition: all .5s;
             &:hover{
                 background: rgba(255, 255, 255, 0.4);
+                border-radius: 50%;
+                cursor: pointer;
             }
         }
     }
