--- a/the-best/src/component/setting/style.less
+++ b/the-best/src/component/setting/style.less
@@ -32,23 +32,30 @@
     }
 
     .opacity{
-        background: #ffffff2b;
+        background: rgba(255, 255, 255, 0.2);
         border: none;
-        height: 24px;
+        height: 30px;
+        width: 100px;
         outline: none;
     }
 
-    .show{
-        display: block;
+    ul.show{
+        // display: block;
+        transform: scaleY(1);
     }
 
-    .hide{
-        display: none;
+    ul.hide{
+        // display: none;
+        height: 0 !important;
+        transform: scaleY(0);
     }
 
     ul{
         list-style-type: none;
-        overflow: auto;
+        overflow: hidden;
+        height: 200px;
+        transition: all .5s ease-in-out;
+        transform-origin: 0 0 0;
         li{
             margin: 5px;
         }
@@ -56,6 +63,7 @@
 
     .background-image ul{
         height: 400px;
+        overflow: auto;
     }
 
     .setting-title{
@@ -97,6 +105,13 @@
             margin-left: 10px;
             width: 50%;
             display: inline-block;
+            float: left;
         }
+    }
+}
+
+@keyframes slide-down{
+    to{
+        transform: scaleY(1);
     }
 }
