--- a/the-best/src/component/store/style.less
+++ b/the-best/src/component/store/style.less
@@ -31,6 +31,7 @@
         &:hover{
             font-size: 28px;
             background-color: rgba(255, 255, 255, 0.4);
+            cursor: pointer;
         }
     }
 }
