--- a/the-best/src/share/mr/component/carousel/style.css
+++ b/the-best/src/share/mr/component/carousel/style.css
@@ -1,9 +1,12 @@
 
 .mr-carousel{
-	width: 100%;
-	height: 100%;
+	width: 50%;
+	height: 70%;
 	position: relative;
 	overflow: hidden;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .mr-carousel:hover .mr-carousel-btn-before{
@@ -94,8 +97,8 @@
 .mr-carousel-item-center{
 	display: block;
 	z-index: 20;
-	width: 100%;
-	height: 100%;
+	width: 70%;
+	height: 80%;
 	left: 50%;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
