--- a/the-best/src/share/style/global.less
+++ b/the-best/src/share/style/global.less
@@ -44,3 +44,30 @@ div, p, ul, ol, li, h1, h2, h3, h4, h5, h6{
     background: rgba(255, 255, 255, 0.2);
 }
 
+.ant-input-number-input{
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+}
+
+.ant-input-number-handler-wrap{
+        border-left: 0px solid #d9d9d9;
+        width: 22px;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.2);
+        position: absolute;
+        top: 0;
+        right: 0;
+        opacity: 0;
+        border-radius: 0 4px 4px 0;
+        transition: opacity 0.24s linear 0.1s;
+        z-index: 2;
+        color: #fff !important;
+}
+
+.ant-input-number-handler-up-inner:before{
+    color: #fff;
+}
+
+.ant-input-number-handler-down-inner:before{
+    color: #fff;
+}
