--- a/the-best/src/share/style/global.less
+++ b/the-best/src/share/style/global.less
@@ -36,11 +36,11 @@ div, p, ul, ol, li, h1, h2, h3, h4, h5, h6{
     height: 1px;
 }
 ::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
-    border-radius: 10px;
+    // border-radius: 10px;
     background: rgba(255, 255, 255, 0.4);
 }
 ::-webkit-scrollbar-track {/*滚动条里面轨道*/
-    border-radius: 10px;
+    // border-radius: 10px;
     background: rgba(255, 255, 255, 0.2);
 }
 
