--- a/the-best/src/component/markdownEditor/style.less
+++ b/the-best/src/component/markdownEditor/style.less
@@ -9,8 +9,10 @@
         height: 100%;
         float: left;
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         flex-direction: column;
+        margin-top: 30px;
+        font-size: 12px;
         // border-right: 1px solid rgba(255, 255, 255, 0.2);
         div{
             height: 30px;
