--- a/the-best/src/component/footer/style.less
+++ b/the-best/src/component/footer/style.less
@@ -30,7 +30,7 @@
         float: left;
     }
 
-    .btn{
+    .icon{
         width: 30px;
         text-align: center;
         height: 30px;
@@ -43,7 +43,7 @@
             cursor: pointer;
         }
     }
-    .btn.time{
+    .icon.time{
         width: 70px;
         text-align: center;
     }
