--- a/the-best/src/component/dialog/style.less
+++ b/the-best/src/component/dialog/style.less
@@ -40,7 +40,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
-        padding: 5px;
+        // padding: 5px;
     }
 }
 
