--- a/the-best/src/component/musicPlayer/style.less
+++ b/the-best/src/component/musicPlayer/style.less
@@ -3,287 +3,301 @@
   height: 100%;
 }
 
-@import "https://fonts.googleapis.com/css?family=Open+Sans";
-* {
-  outline: none;
-  user-select: none;
+// @import url(https://fonts.googleapis.com/css?family=Open+Sans:100,400,300,600,700);
+
+
+.jAudio--player li {
+  float: left;
+  list-style: none;
 }
 
-.music-box {
-    position: absolute;
-    /* top: 50%; */
-    /* left: 50%; */
-    /* transform: translate(-50%, -50%); */
-    padding: 15px;
-    width: 100%;
-    height: initial;
-    background-color: #463239;
-    box-shadow: 0 0 15px #535353;
-    border-radius: 3px;
-    overflow: hidden;
+.jAudio--player {
+  display: table;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
+  margin: 0px auto;
+  width: 352px;
 }
-.music-box .album {
-  position: relative;
-}
-.music-box .album .photo {
-  background: url("https://zero-space.s3.amazonaws.com/photos/cd69aadc-9775-49fc-8c1a-b80c1c380d4ax840.jpg")
-    no-repeat 100% 100%;
-  background-size: cover;
-  width: 100%;
-  height: 300px;
-}
-.music-box .album .infos {
-  background-color: rgba(70, 50, 57, 0.3);
-  width: 100%;
-  height: 60px;
-  position: absolute;
-  bottom: 0;
-}
-.music-box .album .infos .song {
-  padding: 10px;
-  color: #c6ad94;
-  letter-spacing: 0.5px;
-}
-.music-box .album .infos .song span,
-.music-box .album .infos .song small {
+.jAudio--player:after {
+  content: " ";
   display: block;
+  width: 100%;
+  clear: both;
 }
-.music-box .dashboard {
-  margin-top: 15px;
-}
-.music-box .dashboard .list {
+.jAudio--player .jAudio--ui {
   position: relative;
-  transition-duration: 0.3s;
-  background-color: #eee;
-  right: 0;
+  width: 100%;
 }
-.music-box .dashboard .list .list-btn {
-  z-index: 2;
-  background-color: #ffba49;
-  width: 44px;
-  height: 44px;
-  position: absolute;
-  right: 5px;
-  top: -44px;
-  cursor: pointer;
-  transition-duration: 0.3s;
-  transition-delay: 0.9s;
+.jAudio--player .jAudio--status-bar {
+  width: 100%;
+  z-index: 1;
+  position: relative;
+  padding: 100px 2rem 2rem 2rem;
+  display: table;
 }
-.music-box .dashboard .list .list-btn span {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.jAudio--player .jAudio--status-bar:after {
+  content: " ";
   display: block;
-  width: 28px;
-  height: 1px;
-  background-color: #463239;
-  position: relative;
-  transition: width 0.3s 0.3s, background-color 0.3s 0.6s;
-  transition-timing-function: linear;
+  width: 100%;
+  clear: both;
 }
-.music-box .dashboard .list .list-btn span::before,
-.music-box .dashboard .list .list-btn span::after {
-  background-color: #463239;
-  content: "";
-  width: 28px;
-  height: 1px;
+.jAudio--player .jAudio--controls {
+  width: 100%;
+  display: table;
+  background: #fafafa;
+}
+.jAudio--player .jAudio--controls:after {
+  content: " ";
+  display: block;
+  width: 100%;
+  clear: both;
+}
+.jAudio--player .jAudio--controls ul {
+  display: table;
+  overflow: hidden;
+  width: 100%;
+}
+.jAudio--player .jAudio--controls ul:after {
+  content: " ";
+  display: block;
+  width: 100%;
+  clear: both;
+}
+.jAudio--player .jAudio--controls li {
+  position: relative;
+  width: 33.3333%;
+  height: 5rem;
+  line-height: 5rem;
+}
+.jAudio--player .jAudio--thumb {
   position: absolute;
-  left: 0;
   top: 0;
-  transition-timing-function: linear;
-  transition: width 0.3s 0.3s, margin 0.3s 0.6s, transform 0.3s 0.3s;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center center;
 }
-.music-box .dashboard .list .list-btn span::before {
-  margin-top: 6px;
+.jAudio--player .jAudio--time {
+  display: table;
+  width: 100%;
 }
-.music-box .dashboard .list .list-btn span::after {
-  margin-top: -6px;
+.jAudio--player .jAudio--time:after {
+  content: " ";
+  display: block;
+  width: 100%;
+  clear: both;
 }
-.music-box .dashboard .list.active .list-btn {
-  top: -322px;
-  transition: top 0.3s 0.6s;
+.jAudio--player .jAudio--time * {
+  width: 50%;
+  display: block;
+  float: left;
+  color: #fff;
+  text-shadow: 0 1px 1px #000;
+  font-size: 0.9rem;
 }
-.music-box .dashboard .list.active .list-btn span {
-  background-color: transparent;
-  width: 34px;
-  transition: width 0.3s, background-color 0.3s;
+.jAudio--player .jAudio--time .jAudio--time-elapsed {
+  text-align: left;
 }
-.music-box .dashboard .list.active .list-btn span::before,
-.music-box .dashboard .list.active .list-btn span::after {
-  margin: 0;
-  width: 34px;
-  transition: width 0.3s, margin 0.3s, transform 0.3s 0.3s;
+.jAudio--player .jAudio--time .jAudio--time-total {
+  text-align: right;
 }
-.music-box .dashboard .list.active .list-btn span::before {
-  transform: rotate(225deg);
+.jAudio--player .jAudio--details * {
+  color: #fff;
+  text-shadow: 0 1px 1px #000;
+  font-size: 1.2rem;
 }
-.music-box .dashboard .list.active .list-btn span::after {
-  transform: rotate(315deg);
+.jAudio--player .jAudio--details *:first-of-type {
+  font-weight: bold;
 }
-.music-box .dashboard .player .time {
-  color: #c6ad94;
+.jAudio--player .jAudio--details p {
+  width: 100%;
 }
-.music-box .dashboard .player .time-rail {
-  height: 1px;
+.jAudio--player .jAudio--details p span {
+  display: block;
+}
+.jAudio--player .jAudio--progress-bar {
+  margin: 1.33333rem 0;
+}
+.jAudio--player .jAudio--progress-bar .jAudio--progress-bar-wrapper {
+  width: 100%;
   position: relative;
-  padding: 15px 0;
+  background: rgba(255, 255, 255, 0.3);
+  cursor: pointer;
+  border-radius: 10px;
   overflow: hidden;
 }
-.music-box .dashboard .player .time-rail .thumb,
-.music-box .dashboard .player .time-rail .track {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-}
-.music-box .dashboard .player .time-rail .thumb {
-  width: 10px;
+.jAudio--player .jAudio--progress-bar .jAudio--progress-bar-played {
   height: 10px;
+  background: #FF6666;
+  position: relative;
+  border-radius: 10px;
+}
+.jAudio--player .jAudio--progress-bar .jAudio--progress-bar-pointer {
+  height: 10px;
+  width: 10px;
   border-radius: 50%;
-  background-color: #ffba49;
-  z-index: 1;
-  left: 30%;
-  transition: 0.3s;
-}
-.music-box .dashboard .player .time-rail .thumb:hover {
-  transform: translateY(-50%) scale(1.2);
-}
-.music-box .dashboard .player .time-rail .thumb::before {
-  content: "";
-  width: 500px;
-  height: 1px;
-  background-color: #ffba49;
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   right: 0;
+  background: #fff;
 }
-.music-box .dashboard .player .time-rail .track {
-  top: 50%;
+.jAudio--player .jAudio--playlist {
+  background: #fff;
+      height: 210px;
+    overflow: auto;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-item {
+  display: block;
   width: 100%;
-  height: 1px;
-  background-color: #c6ad94;
+  padding: 1.33333rem 2rem;
+  display: table;
 }
-.music-box .dashboard .player .time-rail input[type="range"] {
+.jAudio--player .jAudio--playlist .jAudio--playlist-item:after {
+  content: " ";
+  display: block;
   width: 100%;
-  -webkit-appearance: none;
-  overflow: hidden;
-  background: none;
+  clear: both;
 }
-.music-box
-  .dashboard
-  .player
-  .time-rail
-  input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
+.jAudio--player .jAudio--playlist .jAudio--playlist-item.active {
+  background: #f55c5c;
+  border-bottom-color: #f55c5c;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-item.active * {
+  color: #fff;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-item:not(.active):hover {
+  background: #fafafa;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-item:last-of-type {
+  border: 0;
+  margin-bottom: 0;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-thumb {
+  float: left;
+  margin-right: 0.66667rem;
+  display: table;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-thumb:after {
+  content: " ";
+  display: block;
+  width: 100%;
+  clear: both;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-thumb img {
+  height: 2.4rem;
+  width: 2.4rem;
+  border-radius: 50%;
+  float: left;
+  margin-right: 0.5rem;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-meta-text h4 {
+  font-size: 1rem;
+  color: #000;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-meta-text p {
+  font-size: 0.8rem;
+}
+
+.btn {
   position: relative;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #ffba49;
-}
-.music-box .dashboard .action-button {
-  text-align: center;
-}
-.music-box .dashboard .action-button a {
-  cursor: pointer;
-  display: inline-block;
-  width: 44px;
-  height: 44px;
-  margin: 3px;
-  line-height: 44px;
-  color: #c6ad94;
-  transition-duration: 0.3s;
-}
-.music-box .dashboard .action-button a:hover {
-  color: #ffba49;
-}
-.music-box .dashboard .action-button a:hover.play-pause {
-  border-color: #ffba49;
-}
-.music-box .dashboard .action-button a.play-pause {
-  border-radius: 50%;
-  border: 1px solid #c6ad94;
-  font-size: 1.5em;
-  width: 54px;
-  height: 54px;
-  line-height: 54px;
-}
-.music-box .dashboard .action-button a.play-pause.active {
-  border-color: #ffba49;
-}
-.music-box .dashboard .action-button a.play-pause.active i::before {
-  content: "";
-  margin-left: 5px;
-}
-.music-box .dashboard .action-button a.active {
-  color: #ffba49;
-}
-.music-box .lists {
-  z-index: 1;
+  overflow: hidden;
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
-  background-color: #463239;
-  transform: translateX(-100%);
-  transition: 0.3s 0s;
+  background: transparent;
+  border: 0;
 }
-.music-box .lists.active {
-  transform: translateX(0);
-  transition: 0.3s 0.9s;
-}
-.music-box .lists .label {
-  font-size: 2em;
-  padding: 8px 15px;
-  height: 60px;
-  box-sizing: border-box;
-  color: #ffba49;
-}
-.music-box .lists ul {
-  padding-left: 0;
-  margin: 0;
-  list-style-type: none;
-  width: 100%;
-  height: calc(100% - 60px);
+.btn span {
   position: absolute;
-  overflow-y: auto;
-  background-color: #c6ad94;
+  display: table;
+  height: 15px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  overflow: hidden;
 }
-.music-box .lists ul::-webkit-scrollbar {
-  width: 6px;
-  background-color: transparent;
-}
-.music-box .lists ul::-webkit-scrollbar-track {
-  background-color: #463239;
-}
-.music-box .lists ul::-webkit-scrollbar-thumb {
-  background-color: #ffba49;
-  border-radius: 3px;
-}
-.music-box .lists ul li {
-  cursor: pointer;
-  padding: 5px 15px;
-  transition-duration: 0.3s;
-}
-.music-box .lists ul li span,
-.music-box .lists ul li em {
-  display: inline-block;
-}
-.music-box .lists ul li span small {
+.btn span:before, .btn span:after {
   display: block;
+  content: " ";
+  height: 0;
+  float: left;
+  border-color: transparent;
+  border-style: solid;
 }
-.music-box .lists ul li em {
-  float: right;
-  top: 0;
-  font-style: normal;
-  font-size: 12px;
-  margin-top: 12px;
+.btn:active {
+  background: #f5f5f5;
 }
-.music-box .lists ul li:nth-of-type(odd) {
-  background-color: rgba(70, 50, 57, 0.1);
+
+#btn-prev span:before, #btn-prev span:after, #btn-next span:before, #btn-next span:after, #btn-play span:before, #btn-play span:after {
+  border-top: 7.5px solid transparent;
+  border-bottom: 7.5px solid transparent;
 }
-.music-box .lists ul li:hover {
-  background-color: rgba(70, 50, 57, 0.3);
+
+#btn-prev span:before, #btn-prev span:after {
+  border-right: 15px solid #ddd;
+  border-left: 0;
 }
+#btn-prev:active span:before, #btn-prev:active span:after {
+  border-right-color: #FF6666 !important;
+}
+
+#btn-next span:before, #btn-next span:after {
+  border-left: 15px solid #ddd;
+  border-right: 0;
+}
+#btn-next:active span:before, #btn-next:active span:after {
+  border-left-color: #FF6666 !important;
+}
+
+#btn-play span:before {
+  border-left: 15px solid #ddd;
+  border-right: 0;
+}
+#btn-play span:after {
+  display: none;
+}
+#btn-play:active span:before, #btn-play.active span:before {
+  border-left-color: #FF6666 !important;
+}
+
+#btn-pause span:before, #btn-pause span:after {
+  width: 5px;
+  height: 15px;
+  background: #FF6666;
+  border: 0;
+}
+#btn-pause span:before {
+  margin-right: 5px;
+}
+#btn-pause span:active:before, #btn-pause span:active:after, #btn-pause span.active:before, #btn-pause span.active:after {
+  background: #fff;
+  margin-right: 5px;
+}
+
+.jAudio--player .jAudio--controls li button span:before, .jAudio--player .jAudio--controls li button span:after {
+  -webkit-transition: border-color 0.3s ease 0s;
+          transition: border-color 0.3s ease 0s;
+}
+.jAudio--player .jAudio--thumb {
+  -webkit-transition: all 0.5s ease 0s;
+          transition: all 0.5s ease 0s;
+}
+.jAudio--player .jAudio--progress-bar .jAudio--progress-bar-played {
+  -webkit-transition: all 0.2s ease 0s;
+          transition: all 0.2s ease 0s;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-item {
+  -webkit-transition: all 0.5s ease 0s;
+          transition: all 0.5s ease 0s;
+}
+.jAudio--player .jAudio--playlist .jAudio--playlist-item * {
+  -webkit-transition: all 0.3s ease 0s;
+          transition: all 0.3s ease 0s;
+}
+
+/*# sourceMappingURL=main.css.map */
