--- a/the-best/src/share/style/global.less
+++ b/the-best/src/share/style/global.less
@@ -14,6 +14,14 @@ html, body, #root{
     height: 100%;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans";
+  outline: none;
+}
+
 div, p, ul, ol, li, h1, h2, h3, h4, h5, h6{
     margin: 0;
     padding: 0;
@@ -32,7 +40,7 @@ div, p, ul, ol, li, h1, h2, h3, h4, h5, h6{
 }
 
 ::-webkit-scrollbar {/*滚动条整体样式*/
-    width: 10px;     /*高宽分别对应横竖滚动条的尺寸*/
+    width: 0px;     /*高宽分别对应横竖滚动条的尺寸*/
     height: 1px;
 }
 ::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
