--- a/the-best/src/component/musicPlayer/style.less
+++ b/the-best/src/component/musicPlayer/style.less
@@ -150,7 +150,8 @@
 .jAudio--player .jAudio--playlist .jAudio--playlist-item {
   display: block;
   width: 100%;
-  padding: 1.33333rem 2rem;
+  // padding: 1.33333rem 2rem;
+  padding: 10px 30px;
   display: table;
 }
 .jAudio--player .jAudio--playlist .jAudio--playlist-item:after {
