--- a/project-the-best/src/share/style/global.less
+++ b/project-the-best/src/share/style/global.less
@@ -35,8 +35,12 @@ div, p, ul, ol, li, h1, h2, h3, h4, h5, h6{
     background: rgba(255, 255, 255, 0.2) !important;
 }
 
-.ant-tooltip-arrow{
+.ant-tooltip-placement-top .ant-tooltip-arrow{
     border-top-color:rgba(255, 255, 255, 0.2) !important;
+}
+
+.ant-tooltip-placement-right .ant-tooltip-arrow{
+    border-right-color:rgba(255, 255, 255, 0.2) !important;
 }
 
 ::-webkit-scrollbar {/*滚动条整体样式*/
